--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -34,6 +34,7 @@
 		android:label="@string/app_name"
 		android:logo="@drawable/logo"
 		android:theme="@style/BriarTheme">
+
 		<service
 			android:name=".android.BriarService"
 			android:exported="false">
@@ -41,6 +42,7 @@
 				<action android:name="org.briarproject.android.BriarService"/>
 			</intent-filter>
 		</service>
+
 		<activity
 			android:name=".android.DevReportActivity"
 			android:excludeFromRecents="true"
@@ -50,19 +52,23 @@
 			android:launchMode="singleInstance"
 			android:process=":briar_error_handler">
 		</activity>
+
 		<activity
 			android:name=".android.ExpiredActivity"
 			android:label="@string/app_name">
 		</activity>
+
 		<activity
 			android:name=".android.PasswordActivity"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateVisible">
 		</activity>
+
 		<activity
 			android:name=".android.SetupActivity"
 			android:label="@string/setup_title">
 		</activity>
+
 		<activity
 			android:name=".android.SplashScreenActivity"
 			android:theme="@style/BriarThemeNoActionBar.Default"
@@ -72,16 +78,12 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity
-			android:name=".android.TestingActivity"
-			android:label="@string/app_name">
-		</activity>
 
 		<activity
 			android:name=".android.NavDrawerActivity"
 			android:theme="@style/BriarThemeNoActionBar.Default"
-		    android:launchMode="singleTop"
-			/>
+		    android:launchMode="singleTop">
+		</activity>
 
 		<activity
 			android:name=".android.contact.ConversationActivity"
@@ -94,6 +96,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.AvailableForumsActivity"
 			android:label="@string/available_forums_title"
@@ -103,6 +106,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.CreateForumActivity"
 			android:label="@string/create_forum_title"
@@ -113,6 +117,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.ForumActivity"
 			android:label="@string/app_name"
@@ -122,6 +127,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.ReadForumPostActivity"
 			android:label="@string/app_name"
@@ -131,6 +137,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.ShareForumActivity"
 			android:label="@string/app_name"
@@ -140,6 +147,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.forum.WriteForumPostActivity"
 			android:label="@string/app_name"
@@ -150,11 +158,13 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.identity.CreateIdentityActivity"
 			android:label="@string/new_identity_title"
 			android:windowSoftInputMode="stateVisible">
 		</activity>
+
 		<activity
 			android:name=".android.invitation.AddContactActivity"
 			android:label="@string/add_contact_title"
@@ -164,6 +174,7 @@
 				android:value=".android.NavDrawerActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.keyagreement.KeyAgreementActivity"
 			android:label="@string/add_contact_title"
@@ -173,6 +184,7 @@
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".android.NavDrawerActivity"/>
 		</activity>
+
 		<activity
 			android:name=".android.introduction.IntroductionActivity"
 			android:label="@string/introduction_activity_title"
@@ -183,10 +195,12 @@
 				android:value=".android.contact.ConversationActivity"
 				/>
 		</activity>
+
 		<activity
 			android:name=".android.StartupFailureActivity"
 			android:label="@string/startup_failed_activity_title">
 		</activity>
+
 		<activity
 			android:name=".android.SettingsActivity"
 			android:label="@string/settings_title"
@@ -200,6 +214,7 @@
 				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
+
 		<activity
 			android:name=".android.panic.PanicPreferencesActivity"
 			android:label="@string/panic_setting">
@@ -210,6 +225,7 @@
 				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
+
 		<activity
 			android:name=".android.panic.PanicResponderActivity"
 			android:noHistory="true"
@@ -220,8 +236,11 @@
 				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
+
 		<activity
 			android:name=".android.panic.ExitActivity"
-			android:theme="@android:style/Theme.NoDisplay"/>
+			android:theme="@android:style/Theme.NoDisplay">
+		</activity>
+
 	</application>
 </manifest>
