Collect dev report data on a thread with a looper. #328

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -45,7 +45,7 @@
 		</service>
 
 		<activity
-			android:name=".android.DevReportActivity"
+			android:name=".android.report.DevReportActivity"
 			android:excludeFromRecents="true"
 			android:exported="false"
 			android:finishOnTaskLaunch="true"
