Finished unit tests for SetupActivity and its Controller

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -105,6 +105,9 @@ android {
 		test.setRoot('test')
 		test {
 			java.srcDirs = ['test/java']
+			testOptions {
+				unitTests.returnDefaultValues = true
+			}
 		}
 
 
