--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -48,14 +48,14 @@ dependencies {
 
 	testCompile 'junit:junit:4.12'
 	testCompile 'net.jodah:concurrentunit:0.4.2'
-	testApt 'com.google.dagger:dagger-compiler:2.4'
+	testApt 'com.google.dagger:dagger-compiler:2.0.2'
 	testCompile project(path: ':briar-tests')
-	testCompile 'org.robolectric:robolectric:3.1-SNAPSHOT'
+	testCompile 'org.robolectric:robolectric:3.0'
 	testCompile 'org.mockito:mockito-core:1.10.19'
 
 	androidTestCompile 'org.robolectric:robolectric:3.0'
 	androidTestCompile 'org.mockito:mockito-core:1.10.19'
-	androidTestApt 'com.google.dagger:dagger-compiler:2.4'
+	androidTestApt 'com.google.dagger:dagger-compiler:2.0.2'
 	androidTestCompile 'junit:junit:4.12'
 }
 
