--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -150,6 +150,16 @@
 		</activity>
 
 		<activity
+			android:name=".android.forum.ForumSharingStatusActivity"
+			android:label="@string/forum_sharing_status"
+			android:parentActivityName=".android.forum.ForumActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.forum.ForumActivity"
+				/>
+		</activity>
+
+		<activity
 			android:name=".android.forum.WriteForumPostActivity"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.NavDrawerActivity"
