Add a BlogActivity that shows a list of blog posts
This commit lays the groundwork for #415

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -160,6 +160,15 @@
 		</activity>
 
 		<activity
+			android:name=".android.blogs.BlogActivity"
+			android:parentActivityName=".android.NavDrawerActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.NavDrawerActivity"
+				/>
+		</activity>
+
+		<activity
 			android:name=".android.identity.CreateIdentityActivity"
 			android:label="@string/new_identity_title"
 			android:windowSoftInputMode="stateVisible">
