Add an activity to write blog posts
Closes #411

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -169,6 +169,17 @@
 		</activity>
 
 		<activity
+			android:name=".android.blogs.WriteBlogPostActivity"
+			android:label="@string/blogs_write_blog_post"
+			android:parentActivityName=".android.blogs.BlogActivity"
+			android:windowSoftInputMode="stateVisible|adjustResize">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".android.blogs.BlogActivity"
+				/>
+		</activity>
+
+		<activity
 			android:name=".android.identity.CreateIdentityActivity"
 			android:label="@string/new_identity_title"
 			android:windowSoftInputMode="stateVisible">
