Improve Account Setup Screen
* Explain what "account creation" means on first run
* Use hints instead of dedicated text views
* Move password strength meter up into the user's view
* Always move user's view to current input field
* Improve "Forgot Password" dialog

Closes #151

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -67,7 +67,8 @@
 
 		<activity
 			android:name=".android.SetupActivity"
-			android:label="@string/setup_title">
+			android:label="@string/setup_title"
+			android:windowSoftInputMode="adjustResize">
 		</activity>
 
 		<activity
