--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -51,7 +51,8 @@
 			android:finishOnTaskLaunch="true"
 			android:label="@string/crash_report_title"
 			android:launchMode="singleInstance"
-			android:process=":briar_error_handler">
+			android:process=":briar_error_handler"
+			android:theme="@style/BriarThemeNoActionBar.Default">
 		</activity>
 
 		<activity
