--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -52,7 +52,8 @@
 			android:label="@string/crash_report_title"
 			android:launchMode="singleInstance"
 			android:process=":briar_error_handler"
-			android:theme="@style/BriarThemeNoActionBar.Default">
+			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:windowSoftInputMode="stateHidden">
 		</activity>
 
 		<activity
