Show Blog Invitations
This refactors the forum invitation code,
so it can be used by both: forums and blogs.

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -102,7 +102,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.forum.ForumInvitationsActivity"
+			android:name=".android.sharing.InvitationsActivity"
 			android:label="@string/forum_invitations_title"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
