Care for lint errors
No more general disabling of abortOnError
Resolved all *errors* beside language ones  MissingTranslation & ImpliedQuantity
Issue context: #567

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -134,8 +134,10 @@ android {
 	}
 
 	lintOptions {
-		abortOnError false
+		warning 'MissingTranslation'
+		warning 'ImpliedQuantity'
 	}
+
 	dexOptions {
 		incremental true
 	}
