Group strings and remove unused resources
Closes #342

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -277,7 +277,7 @@
 
 		<activity
 			android:name=".android.SettingsActivity"
-			android:label="@string/settings_title"
+			android:label="@string/settings_button"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
