--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -48,11 +48,6 @@ dependencies {
 	testCompile project(path: ':briar-tests')
 	testCompile 'org.robolectric:robolectric:3.0'
 	testCompile 'org.mockito:mockito-core:1.10.19'
-
-	androidTestCompile 'org.robolectric:robolectric:3.0'
-	androidTestCompile 'org.mockito:mockito-core:1.10.19'
-	androidTestApt 'com.google.dagger:dagger-compiler:2.0.2'
-	androidTestCompile 'junit:junit:4.12'
 }
 
 dependencyVerification {
@@ -105,24 +100,16 @@ android {
 				unitTests.returnDefaultValues = true
 			}
 		}
-
-
-		// Move the build types to build-types/<type>
-		// For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
-		// This moves them out of them default location under src/<type>/... which would
-		// conflict with src/ being used by the main source set.
-		// Adding new build types or product flavors should be accompanied
-		// by a similar customization.
-		debug.setRoot('build-types/debug')
-		release.setRoot('build-types/release')
 	}
 
 	buildTypes {
 		debug {
+			shrinkResources false
 			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
 		}
 		release {
+			shrinkResources true
 			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
 		}
