Disable verification of Tor binaries so we can use old ones.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -189,8 +189,8 @@ project.afterEvaluate {
     preBuild.dependsOn {
         [
                 'verifyTorGeoIp',
-                'verifyTorBinaryArm',
-                'verifyTorBinaryArmPie',
+                // 'verifyTorBinaryArm',
+                // 'verifyTorBinaryArmPie',
                 'verifyTorBinaryX86',
                 'verifyTorBinaryX86Pie'
         ]
