Emoji Support for all user input
All text that can be generated by users will show emoji from the
shipped sprites.

For all messages and posts, the custom emoji keyboard is now available.

This also disables menu actions rather than hiding them and thus
closes #677

Included is a fix for a regression that was not showing the keyboard
automatically in forums and thus
closes #676

--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -93,7 +93,7 @@
 			android:label="@string/app_name"
 			android:theme="@style/BriarThemeNoActionBar.Default"
 			android:parentActivityName=".android.NavDrawerActivity"
-			android:windowSoftInputMode="stateHidden">
+			android:windowSoftInputMode="stateHidden|adjustResize">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".android.NavDrawerActivity"
@@ -145,7 +145,8 @@
 		<activity
 			android:name=".android.sharing.ShareForumActivity"
 			android:label="@string/activity_share_toolbar_header"
-			android:parentActivityName=".android.forum.ForumActivity">
+			android:parentActivityName=".android.forum.ForumActivity"
+			android:windowSoftInputMode="adjustResize|stateHidden">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".android.forum.ForumActivity"
@@ -155,7 +156,8 @@
 		<activity
 			android:name=".android.sharing.ShareBlogActivity"
 			android:label="@string/activity_share_toolbar_header"
-			android:parentActivityName=".android.blogs.BlogActivity">
+			android:parentActivityName=".android.blogs.BlogActivity"
+			android:windowSoftInputMode="adjustResize|stateHidden">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".android.blogs.BlogActivity"
