--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -123,7 +123,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.privategroup.invitation.InvitationsGroupActivity"
+			android:name=".android.privategroup.invitation.GroupInvitationsActivity"
 			android:label="@string/groups_invitations_title"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
@@ -133,7 +133,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.InvitationsForumActivity"
+			android:name=".android.sharing.ForumInvitationsActivity"
 			android:label="@string/forum_invitations_title"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
@@ -143,7 +143,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.InvitationsBlogActivity"
+			android:name=".android.sharing.BlogInvitationsActivity"
 			android:label="@string/blogs_sharing_invitations_title"
 			android:parentActivityName=".android.contact.ConversationActivity">
 			<meta-data
@@ -175,7 +175,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.ShareForumActivity"
+			android:name=".android.sharing.ForumShareActivity"
 			android:label="@string/activity_share_toolbar_header"
 			android:parentActivityName=".android.forum.ForumActivity"
 			android:windowSoftInputMode="adjustResize|stateHidden">
@@ -186,7 +186,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.ShareBlogActivity"
+			android:name=".android.sharing.BlogShareActivity"
 			android:label="@string/activity_share_toolbar_header"
 			android:parentActivityName=".android.blogs.BlogActivity"
 			android:windowSoftInputMode="adjustResize|stateHidden">
@@ -197,7 +197,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.SharingStatusForumActivity"
+			android:name=".android.sharing.ForumSharingStatusActivity"
 			android:label="@string/sharing_status"
 			android:parentActivityName=".android.forum.ForumActivity">
 			<meta-data
@@ -207,7 +207,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.SharingStatusBlogActivity"
+			android:name=".android.sharing.BlogSharingStatusActivity"
 			android:label="@string/sharing_status"
 			android:parentActivityName=".android.blogs.BlogActivity">
 			<meta-data
