--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -123,7 +123,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.privategroup.invitation.GroupInvitationsActivity"
+			android:name=".android.privategroup.invitation.GroupInvitationActivity"
 			android:label="@string/groups_invitations_title"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
@@ -133,7 +133,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.ForumInvitationsActivity"
+			android:name=".android.sharing.ForumInvitationActivity"
 			android:label="@string/forum_invitations_title"
 			android:parentActivityName=".android.NavDrawerActivity">
 			<meta-data
@@ -143,7 +143,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.BlogInvitationsActivity"
+			android:name=".android.sharing.BlogInvitationActivity"
 			android:label="@string/blogs_sharing_invitations_title"
 			android:parentActivityName=".android.contact.ConversationActivity">
 			<meta-data
@@ -175,7 +175,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.ForumShareActivity"
+			android:name=".android.sharing.ShareForumActivity"
 			android:label="@string/activity_share_toolbar_header"
 			android:parentActivityName=".android.forum.ForumActivity"
 			android:windowSoftInputMode="adjustResize|stateHidden">
@@ -186,7 +186,7 @@
 		</activity>
 
 		<activity
-			android:name=".android.sharing.BlogShareActivity"
+			android:name=".android.sharing.ShareBlogActivity"
 			android:label="@string/activity_share_toolbar_header"
 			android:parentActivityName=".android.blogs.BlogActivity"
 			android:windowSoftInputMode="adjustResize|stateHidden">
