--- a/briar-android/AndroidManifest.xml
+++ b/briar-android/AndroidManifest.xml
@@ -133,7 +133,7 @@
 
 			<activity
 			android:name=".android.privategroup.memberlist.GroupMemberListActivity"
-			android:label="@string/app_name"
+			android:label="@string/groups_member_list"
 			android:parentActivityName=".android.privategroup.conversation.GroupActivity"
 			android:windowSoftInputMode="adjustResize|stateHidden">
 			<meta-data
