--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 		android:allowBackup="false"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
-		android:logo="@drawable/logo"
+		android:logo="@mipmap/ic_launcher_round"
 		android:theme="@style/BriarTheme">
 
 		<service
