--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -2,11 +2,8 @@
 <manifest
 	package="org.briarproject.briar"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:versionCode="13"
 	android:versionName="0.13">
-
-	<uses-sdk tools:overrideLibrary="android.support.v14.preference"/>
 
 	<uses-feature android:name="android.hardware.bluetooth"/>
 	<uses-feature android:name="android.hardware.camera" />
@@ -47,7 +44,7 @@
 			android:label="@string/crash_report_title"
 			android:launchMode="singleInstance"
 			android:process=":briar_error_handler"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:windowSoftInputMode="stateHidden">
 		</activity>
 
@@ -70,7 +67,7 @@
 
 		<activity
 			android:name=".android.splash.SplashScreenActivity"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -80,14 +77,14 @@
 
 		<activity
 			android:name=".android.navdrawer.NavDrawerActivity"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 		    android:launchMode="singleTop">
 		</activity>
 
 		<activity
 			android:name=".android.contact.ConversationActivity"
 			android:label="@string/app_name"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:parentActivityName=".android.navdrawer.NavDrawerActivity"
 			android:windowSoftInputMode="stateHidden|adjustResize">
 			<meta-data
@@ -111,7 +108,7 @@
 			android:name=".android.privategroup.conversation.GroupActivity"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.navdrawer.NavDrawerActivity"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:windowSoftInputMode="adjustResize|stateHidden">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -195,7 +192,7 @@
 			android:name=".android.forum.ForumActivity"
 			android:label="@string/app_name"
 			android:parentActivityName=".android.navdrawer.NavDrawerActivity"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:windowSoftInputMode="adjustResize|stateHidden">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -248,7 +245,7 @@
 		<activity
 			android:name=".android.blog.BlogActivity"
 			android:parentActivityName=".android.navdrawer.NavDrawerActivity"
-			android:theme="@style/BriarThemeNoActionBar.Default">
+			android:theme="@style/BriarTheme.NoActionBar">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".android.navdrawer.NavDrawerActivity"/>
@@ -310,7 +307,7 @@
 		<activity
 			android:name=".android.keyagreement.KeyAgreementActivity"
 			android:label="@string/add_contact_title"
-			android:theme="@style/BriarThemeNoActionBar.Default"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:parentActivityName=".android.navdrawer.NavDrawerActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
