Use the new launcher icon.

--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 	<application
 		android:name=".android.BriarApplicationImpl"
 		android:allowBackup="false"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@mipmap/ic_launcher_round"
 		android:label="@string/app_name"
 		android:logo="@mipmap/ic_launcher_round"
 		android:theme="@style/BriarTheme">
