--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -82,6 +82,8 @@ android {
 	defaultConfig {
 		minSdkVersion 14
 		targetSdkVersion 22
+		versionCode 14
+		versionName "0.14"
 		resValue "string", "app_package", "org.briarproject.briar"
 		buildConfigField "String", "GitHash", "\"${getGitHash()}\""
 	}
