--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
 	compile project(':bramble-core')
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile fileTree(dir: 'libs', include: '*.jar')
 	provided 'javax.annotation:jsr250-api:1.0'
 }
 
