--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/fdroid/ci-images:client-latest
+image: registry.gitlab.com/fdroid/ci-images-base:latest
 
 cache:
   paths:
